objects/pse__Triggers__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls trigger execution</description>
    <fields>
        <fullName>pse__RecalculateEstVsActuals_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to disable the RecalculateEstVsActuals2 trigger.</inlineHelpText>
        <label>RecalculateEstVsActuals Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__RecalculateEstVsActuals_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>OBSOLETE - use RecalculateEstVsActuals_Disabled instead</inlineHelpText>
        <label>RecalculateEstVsActuals Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Res_Request_Geolocation_Trigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, the resource request trigger that calculates geolocation from the work address is disabled.  The default value is false.</description>
        <inlineHelpText>When true, the resource request trigger that calculates geolocation from the work address is disabled.  The default value is false.</inlineHelpText>
        <label>Res Request Geolocation Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Geolocation_Trigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, the resource trigger that calculates geolocation from the mailing address is disabled. The default value is false.</description>
        <inlineHelpText>When true, the resource trigger that calculates geolocation from the mailing address is disabled. The default value is false.</inlineHelpText>
        <label>Resource Geolocation Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Skill_Unique_Name_Trigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true, disables the trigger that maintains unique skill names. When false, you can set a value for the UniqueNameAdditionalFields Skills configuration option to configure uniqueness constraints.</description>
        <inlineHelpText>When set to true, disables the trigger that maintains unique skill names. When false, you can set a value for the UniqueNameAdditionalFields Skills configuration option to configure uniqueness constraints.</inlineHelpText>
        <label>Skill Unique Name Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Skill_Unique_Name_Under_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true, skills must have unique names under the same direct parent category in a skills hierarchy.</description>
        <inlineHelpText>When set to true, skills must have unique names under the same direct parent category in a skills hierarchy.</inlineHelpText>
        <label>Skill Unique Name Under Parent Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_Assignment_Delete_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Assignment-Delete Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_Assignment_Insert_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Assignment-Insert Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_Assignment_Update_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Assignment-Update Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_Delete_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task-Delete Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_Insert_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the before insert trigger on task is executed.</inlineHelpText>
        <label>Task-Insert Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_Set_Task_Chain_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the trigger that maintains the task hierarchy chain is disabled.</description>
        <inlineHelpText>Whether the trigger that maintains the task hierarchy chain is disabled.</inlineHelpText>
        <label>Deprecated:Task-Set Task Chain Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_Update_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task-Update Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_Validation_Trigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Validation Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__TrackResourceChanges_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the TrackResourceChanges trigger is disabled.</inlineHelpText>
        <label>TrackResourceChanges_Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__TrackResourceChanges_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>OBSOLETE - Use TrackResourceChanges_Disabled instead</inlineHelpText>
        <label>Deprecated:TrackResourceChanges Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__handleAssignProjectPhaseChangesDisable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the handleAssignmentProjectPhaseChanges trigger is disabled.</description>
        <inlineHelpText>Indicates whether the handleAssignmentProjectPhaseChanges trigger is disabled.</inlineHelpText>
        <label>handleAsnProjPhaseChangeDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__handleAssignmentProjectMethChangeDisable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the handleAssignmentProjectMethodologyChanges trigger is disabled.</description>
        <inlineHelpText>Indicates whether the handleAssignmentProjectMethodologyChanges trigger is disabled.</inlineHelpText>
        <label>handleAsnProjMethChangeDisabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Triggers</label>
</CustomObject>